--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "build": "tsc --build",
-    "test": "yarn build && node ./dist/index.js"
+    "test": "yarn build && node ./dist/index.js",
+    "vendor": "cd ./vendor/Charp.Core && nuget restore"
   },
   "dependencies": {
     "@types/node": "^17.0.31",
