--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "devDependencies": {
+    "@types/node": "^17.0.35",
     "typescript": "^4.6.4"
   },
   "scripts": {
@@ -12,7 +13,7 @@
     "vendor": "cd ./vendor/Charp.Core && nuget restore & dotnet build"
   },
   "dependencies": {
-    "@types/node": "^17.0.31",
-    "fs-extra": "^10.1.0"
+    "fs-extra": "^10.1.0",
+    "typescript-json-serializer": "^4.2.0"
   }
 }
