--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,11 @@
     "removeComments": true,
     "preserveConstEnums": true,
     "sourceMap": true,
-    "outDir": "dist"
+    "outDir": "dist",
+
+    /* Required for typescript-json-serializer */
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
   },
   "include": [ "src/**/*.ts" ]
 }
