--- a/package.json
+++ b/package.json
@@ -3,17 +3,31 @@
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
-  "devDependencies": {
-    "@types/node": "^17.0.35",
-    "typescript": "^4.6.4"
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Chase-William/Charp/tree/main"
   },
   "scripts": {
-    "build": "tsc --build",
-    "test": "yarn build && node ./dist/index.js",
-    "vendor": "git submodule update --init --recursive && cd ./vendor/Charp.Core && nuget restore & dotnet build"
+    "run": "yarn build && node ./dist/index.js",
+    "test": "jest --config jestconfig.json",
+    "vendor": "git submodule update --init --recursive && cd ./vendor/Charp.Core && nuget restore & dotnet build",
+    "format": "prettier --write \"src/**/*.ts\"",
+    "lint": "eslint eslintrc.json"
   },
   "dependencies": {
     "fs-extra": "^10.1.0",
     "typescript-json-serializer": "^4.2.0"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.5.1",
+    "@types/node": "^17.0.35",
+    "@typescript-eslint/eslint-plugin": "^5.26.0",
+    "@typescript-eslint/parser": "^5.26.0",
+    "eslint": "^8.16.0",
+    "eslint-config-prettier": "^8.5.0",
+    "jest": "^28.1.0",
+    "prettier": "^2.6.2",
+    "ts-jest": "^28.0.3",
+    "typescript": "^4.6.4"
   }
 }
