--- a/package.json
+++ b/package.json
@@ -8,17 +8,18 @@
     "url": "https://github.com/Chase-William/Charp/tree/main"
   },
   "scripts": {
-    "run": "yarn build && node ./dist/index.js",
-    "test": "jest --config jestconfig.json",
+    "e": "tsc --build && node ./dist/index.js",
+    "test": "tsc --build && jest",
     "vendor": "git submodule update --init --recursive && cd ./vendor/Charp.Core && nuget restore & dotnet build",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint eslintrc.json"
   },
   "dependencies": {
     "fs-extra": "^10.1.0",
-    "typescript-json-serializer": "^4.2.0"
+    "typedjson": "^1.8.0"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.17.12",
     "@types/jest": "^27.5.1",
     "@types/node": "^17.0.35",
     "@typescript-eslint/eslint-plugin": "^5.26.0",
