--- a/package.json
+++ b/package.json
@@ -8,12 +8,17 @@
     "url": "https://github.com/Chase-William/Charp/tree/main"
   },
   "scripts": {
-    "e": "tsc --build && node ./dist/app.js",
+    "e": "tsc --build && node ./dist/app.js --development-env",
     "test": "tsc --build && jest",
+    "build": "tsc --build",
     "vendor": "git submodule update --remote --recursive && cd ./vendor/Charp.Core && nuget restore & dotnet build",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint eslintrc.json",
-    "package": "pkg ./dist/app.js --targets latest-windows-x64"
+
+    "bundle": "yarn prepare-bundle && yarn bundle-node && yarn post-bundle",
+    "prepare-bundle": "yarn build && cd ./vendor/Charp.Core && nuget restore & dotnet build",
+    "bundle-node": "pkg ./dist/app.js --targets latest-windows-x64 --out-path deployable",
+    "post-bundle": "node bundler.js"
   },
   "dependencies": {
     "fs-extra": "^10.1.0",
