--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lint": "eslint eslintrc.json",
 
     "bundle": "yarn prepare-bundle && yarn bundle-node && yarn post-bundle",
-    "prepare-bundle": "yarn build && cd ./vendor/Charp.Core && nuget restore & dotnet build",
+    "prepare-bundle": "yarn build && cd ./vendor/Charp.Core && nuget restore & dotnet build --configuration Release",
     "bundle-node": "pkg ./dist/app.js --targets latest-windows-x64 --out-path deployable",
     "post-bundle": "node bundler.js"
   },
