--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
     "e": "tsc --build && node ./dist/app.js --development-env",
     "test": "tsc --build && jest",
     "build": "tsc --build",
-    "vendor": "git submodule update --remote --recursive && cd ./vendor/Charp.Core && nuget restore & dotnet build",
+    "vendor": "git submodule init && git submodule update --remote --recursive && cd ./vendor/Charp.Core && nuget restore & dotnet build",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint eslintrc.json",
-
     "bundle": "yarn prepare-bundle && yarn bundle-node && yarn post-bundle",
     "prepare-bundle": "yarn build && cd ./vendor/Charp.Core && nuget restore & dotnet publish -c Release",
     "bundle-node": "pkg ./dist/app.js --targets latest-windows-x64 --out-path deployable",
     "post-bundle": "node bundler.js"
   },
   "dependencies": {
+    "fast-xml-parser": "^4.0.8",
     "fs-extra": "^10.1.0",
     "typedjson": "^1.8.0"
   },
