--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "vendor/Charp.Core"]
-	path = vendor/Charp.Core
+[submodule "vendor/Docshark.Core"]
+	path = vendor/Docshark.Core
 	url = https://github.com/Chase-William/Charp.Core.git
